// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HeaderAlert should render correctly dismissable 1`] = `
<div
  class="pf-v6-c-alert pf-m-info chr-c-alert"
  data-ouia-component-id="OUIA-Generated-Alert-info-:r2:"
  data-ouia-component-type="PF6/Alert"
  data-ouia-safe="true"
>
  <div
    class="pf-v6-c-alert__icon"
  >
    <svg
      aria-hidden="true"
      class="pf-v6-svg"
      fill="currentColor"
      height="1em"
      role="img"
      viewBox="0 0 32 32"
      width="1em"
    >
      <path
        d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm1.5 22a1.5 1.5 0 1 1-3 0v-5.157l-.188.04a1.5 1.5 0 0 1-.625-2.934l1.956-.416c.112-.024.223-.032.333-.03l.024-.002a1.5 1.5 0 0 1 1.5 1.5v7Zm-.08-12.58c-.38.37-.89.58-1.42.58a1.998 1.998 0 0 1-1.851-2.76c.051-.13.11-.24.19-.35.07-.11.15-.21.25-.3.74-.75 2.08-.75 2.83 0 .09.09.17.19.24.3.08.11.14.22.189.35.05.12.09.24.11.37.03.13.04.26.04.39 0 .53-.21 1.04-.58 1.42Z"
      />
    </svg>
  </div>
  <h4
    class="pf-v6-c-alert__title"
  >
    <span
      class="pf-v6-screen-reader"
    >
      Info alert:
    </span>
    test
  </h4>
  <div
    class="pf-v6-c-alert__action"
  >
    <button
      aria-label="Close Info alert: alert: test"
      class="pf-v6-c-button pf-m-plain"
      data-ouia-component-id="OUIA-Generated-Button-plain-:r3:"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`HeaderAlert should render correctly not dismissable 1`] = `
<div
  class="pf-v6-c-alert pf-m-info chr-c-alert"
  data-ouia-component-id="OUIA-Generated-Alert-info-:r0:"
  data-ouia-component-type="PF6/Alert"
  data-ouia-safe="true"
>
  <div
    class="pf-v6-c-alert__icon"
  >
    <svg
      aria-hidden="true"
      class="pf-v6-svg"
      fill="currentColor"
      height="1em"
      role="img"
      viewBox="0 0 32 32"
      width="1em"
    >
      <path
        d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm1.5 22a1.5 1.5 0 1 1-3 0v-5.157l-.188.04a1.5 1.5 0 0 1-.625-2.934l1.956-.416c.112-.024.223-.032.333-.03l.024-.002a1.5 1.5 0 0 1 1.5 1.5v7Zm-.08-12.58c-.38.37-.89.58-1.42.58a1.998 1.998 0 0 1-1.851-2.76c.051-.13.11-.24.19-.35.07-.11.15-.21.25-.3.74-.75 2.08-.75 2.83 0 .09.09.17.19.24.3.08.11.14.22.189.35.05.12.09.24.11.37.03.13.04.26.04.39 0 .53-.21 1.04-.58 1.42Z"
      />
    </svg>
  </div>
  <h4
    class="pf-v6-c-alert__title"
  >
    <span
      class="pf-v6-screen-reader"
    >
      Info alert:
    </span>
    test
  </h4>
  <div
    class="pf-v6-c-alert__action"
  >
    <button
      aria-label="Close Info alert: alert: test"
      class="pf-v6-c-button pf-m-plain"
      data-ouia-component-id="OUIA-Generated-Button-plain-:r1:"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
